<resources>
    <string name="app_name">settings</string>
    <string name="light_mode_on">Light mode : On</string>
    <string name="light_mode_off">Light mode : Off</string>
    <string name="hq_mode_on">HQ streaming: On</string>
    <string name="hq_mode_off">HQ streaming: Off</string>
    <string name="int_ui">Interactive UI</string>
    <string name="cl_ui">Classic UI</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="terms_and_privaces">Terms And Privaces</string>
    <string name="settingsFontName">open_sans_regular</string>
    <string name="feedback">Feedback</string>
</resources>
